--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ allprojects {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.springframework', name: 'spring-core', version: '5.0.2.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '5.0.2.RELEASE'
+    compile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.springframework:spring-jdbc:5.0.2.RELEASE'
+    compile 'org.springframework:spring-context:5.0.2.RELEASE'
+    compile 'org.springframework:spring-core:5.0.2.RELEASE'
+    compile group: 'c3p0', name: 'c3p0', version: '0.9.1.2'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.8-dmr'
 
 }
